<resources>
    <string name="app_name">SymrnaApp2</string>
    <string name="todo">TODO</string>
    <string name="home">Home</string>
    <string name="todo1">TODO</string>
    <string name="rehabilitation">Rehabilitation</string>
    <string name="missionary_school">Missionary School</string>
    <string name="donation">Donation</string>
    <string name="produce">Produce</string>
    <string name="other_services">Other Services</string>
    <string name="meet_team">Meet Team</string>
    <string name="contact_us">Contact Us</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="login">LOGIN</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login2">Login</string>
    <string name="do_not_have_an_account">do not have an account</string>
    <string name="todo8">TODO</string>
    <string name="todo10">TODO</string>
    <string name="todo11">TODO</string>
    <string name="sign_up">Sign up</string>
    <string name="todo12">TODO</string>
    <string name="what_we_do">What we do?</string>
    <string name="donations">Donations</string>
    <string name="symrna_global_outreach_is_driven_by_a_deep_commitment_to_aiding_the_vulnerable_by_contributing_to_our_cause_you_play_a_vital_role_in_assisting_the_homeless_individuals_struggling_with_addiction_single_mothers_widows_those_caught_in_the_cycle_of_prostitution_and_individuals_marginalized_by_society_your_generous_donation_would_be_immensely_valued_and_appreciated">Symrna global outreach is driven by a deep commitment to aiding the vulnerable by contributing to our cause you play a vital role in assisting the homeless individuals struggling with addiction single mothers widows those caught in the cycle of prostitution and individuals marginalized by society your generous donation would be immensely valued and appreciated</string>
    <string name="banking_details">Banking Details</string>
    <string name="account_holder_symrna_global_outreach">Account holder: Symrna Global Outreach</string>
    <string name="bank_bank_name">Bank: Bank Name</string>
    <string name="account_type_savings">Account Type: Savings</string>
    <string name="account_number_1234567891">Account Number: 1234567891</string>
    <string name="donate">Donate</string>
    <string name="meet_our_team">Meet Our Team</string>
    <string name="unlock_unforgettable_moments_elevate_your_event_to_extraordinary_heights_at_our_exclusive_venue_book_now_for_a_captivating_space_impeccable_service_and_memories_that_will_linger_long_after_the_lights_go_down_limited_availability_so_seize_the_opportunity_to_make_your_occasion_truly_special_let_s_make_magic_together">Unlock unforgettable moments elevate your event to extraordinary heights at our exclusive venue book now for a captivating space impeccable service and memories that will linger long after the lights go down limited availability so seize the opportunity to make your occasion truly special let\'s make magic together</string>
    <string name="to_hire_a_venue_contact_us">To Hire a Venue</string>
    <string name="venue_hire">Venue Hire</string>
    <string name="name">Name</string>
    <string name="add_item">ADD ITEM</string>
    <string name="upload_image">Upload Image</string>
    <string name="quantity">Quantity</string>
    <string name="description">Description</string>
    <string name="smyrna_global_outreach_operates_a_rehabilitation_center_dedicated_to_assisting_individuals_struggling_with_drug_addiction_our_mission_revolves_around_spreading_the_gospel_and_sharing_the_love_of_jesus_with_nations_while_addressing_their_fundamental_needs_we_firmly_believe_in_the_transformative_power_of_christ_offering_salvation_to_all_who_seek_it">Smyrna global outreach operates a rehabilitation center dedicated to assisting individuals struggling with drug addiction our mission revolves around spreading the gospel and sharing the love of jesus with nations while addressing their fundamental needs we firmly believe in the transformative power of christ offering salvation to all who seek it</string>
    <string name="testimonials">Testimonials</string>
    <string name="name_of_person_testimonial">Name of person testimonial</string>
    <string name="download_form">Download Form</string>
    <string name="utilizing_godly_counsel_and_prayers_to_help_instill_life_changing_values_which_brings_about_relapse_prevention_skills">Utilizing Godly counsel and prayers to help instill life changing values which brings about relapse prevention skills.</string>
    <string name="to_view_all_our_produce_items_please_click_here"><![CDATA[To view all our produce items please click here >>>>]]></string>
    <string name="our_services">Our Services</string>
    <string name="read_more">Read More</string>
    <string name="viewprod">View Produce</string>
    <string name="selectimage">Select Image</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="missionary_school1">Missionary School</string>
    <string name="_09972349792">09972349792</string>
    <string name="symrna_gmail_com">Symrna@gmail.com</string>
    <string name="_47_shongweni_road">47 Shongweni Road</string>
    <string name="President">Director/ President: at Smyrna Global Outreach. Apostle Sardar’s passion is to reach out to the non-believers to instill hope in the Lord Jesus Christ.</string>
    <string name="natasha">Director/ President: at Smyrna Global Outreach. Apostle Sardar’s passion is to reach out to the non-believers to instill hope in the Lord Jesus Christ.</string>
    <string name="Treasurer">Treasurer/ Benefactor. Mr Naicker has been a consistent supporter and a blessing to Smyrna Global Outreach. Mr Naicker has played a pivotal role in donating the property for the Organization.</string>
    <string name="Venue"><![CDATA[Our extremely atmospheric and enthralling venue for hire- used to generate funds for the Mission. 400 -500 guests can be comfortably seated in a banquet style chairs and tables. Upon request for your, Catering, Floral, Décor & Wedding co-ordination are available, as we can offer you the best possible references. All proceeds from the venue hire is put back into the running cost of the Mission.]]></string>
    <string name="DonationText">“A generous person will prosper; whoever refreshes others will be refreshed “– Proverbs 11:25 (NIV) SGO is registered with the Government of South Africa as a Charity Organization under the section Public Benefit organization registered with SARS (PBO NO: 930026023). SGO is an organization that aims to create lasting change for children in need in South Africa, through means of strengthening education services</string>
    <string name="Elizabeth">Elizabeth Kirsten -Age: 52 is our current rehabilitant. Elizabeth reached out to the Mission in 2018 for assistance; she was addicted to alcohol and painkillers. Due to her also being destitute Elizabeth had decided to remain with us as a volunteer.</string>
    <string name="Mission">Tuition free, Holy Spirit Mission School – individuals called, chosen, anointed and appointed by the Holy Spirit to spread the Gospel. We intend on opening our Mission school where we will train missionaries free of cost. We will provide free accommodation; meals, study material while also equipping them with agricultural skills for the benefit of their future ministries to be sustainable.</string>
    <string name="support_sgom_co_za">support@sgom.co.za</string>
    <string name="apostle_sardar_masih_0721250496">Apostle Sardar Masih: 0721250496</string>
    <string name="natasha_mahadeo_0725321040">Natasha Mahadeo: 0725321040</string>
    <string name="bank_standard_bank">Bank: Standard Bank</string>
    <string name="account_number_050573365">Account Number: 050573365</string>
    <string name="link_for_catering_www_ezzisspitbraai_co_za">Link for catering : www.ezzisspitbraai.co.za</string>
    <string name="link_for_deco_khanyimkhize2015_gmail_com_084_555_1932">Link for Deco: khanyimkhize2015@gmail.com (084 555 1932)</string>
    <string name="address">Address</string>
    <string name="for_eft_details_please_visit_our_website_https_smyrnaglobaloutreach_azurewebsites_net_donations">For EFT details, please visit our website: https://smyrnaglobaloutreach.azurewebsites.net/Donations</string>
    <string name="donate_via_paypal">Donate Via paypal</string>
    <string name="link_to_add_review_https_smyrnaglobaloutreach_azurewebsites_net_services_venuehire">Link to add review: https://smyrnaglobaloutreach.azurewebsites.net/Services/VenueHire</string>
</resources>