<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" android:gravity="center">

    <TextView
        android:text="Produce Details"
        android:textStyle="bold"
        android:textSize="19sp"
        android:textColor="@color/white"
        android:background="@drawable/background2"
        android:padding="10dp"
        android:elevation="15dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/prodName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edit_text_background2"
        android:ems="10"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:textAlignment="center"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/prodDesc"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edit_text_background2"
        android:ems="10"
        android:hint="@string/description"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:textAlignment="center"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/prodQuantity"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edit_text_background2"
        android:ems="10"
        android:hint="@string/quantity"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:textAlignment="center"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/btnSelectImage"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/selectimage"
        android:textColor="@color/black"
        android:textSize="18sp"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck,VisualLintButtonSize" />

    <Button
        android:id="@+id/btnReset"
        style="@android:style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edittext_background"
        android:hint="Reset"
        android:textColor="@color/black"
        android:textSize="18sp"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck,VisualLintButtonSize" />






</LinearLayout>